in class updates

--- a/lecture/week-4/slices.ipynb
+++ b/lecture/week-4/slices.ipynb
@@ -9,25 +9,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "2\n",
+      "-\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "-\n",
+      "4\n",
+      "5\n",
+      "7\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "phone = '202-123-4576'\n",
     "\n",
-    "\n",
-    "print(\"Index | Corresponding String Value\")\n",
-    "for i in range(len(phone)):\n",
-    "    print(i,\"|\",phone[i])"
+    "# how to print items in phone number\n",
+    "for item in phone:\n",
+    "    print(item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index | Corresponding String Value\n",
+      "0 | 2\n",
+      "1 | 0\n",
+      "2 | 2\n",
+      "3 | -\n",
+      "4 | 1\n",
+      "5 | 2\n",
+      "6 | 3\n",
+      "7 | -\n",
+      "8 | 4\n",
+      "9 | 5\n",
+      "10 | 7\n",
+      "11 | 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# print the first three numbers\n"
+    "phone = '202-123-4576'\n",
+    "\n",
+    "print(\"Index | Corresponding String Value\")\n",
+    "for puppy in range(len(phone)):\n",
+    "    print(puppy,\"|\",phone[puppy])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'202-123-4576'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phone = '2#02-12%3-45&76'\n",
+    "punctuation = '#%&*)'\n",
+    "\n",
+    "\n",
+    "for character in punctuation:\n",
+    "    phone = phone.replace(character,'')\n",
+    "\n",
+    "phone\n",
+    "# goal: remove punctiation from phone string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'202'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print the first three numbers\n",
+    "\n",
+    "phone[:3]\n"
    ]
   },
   {
@@ -42,20 +134,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# reconstruct full string"
+    "# reconstruct full string\n",
+    "\n",
+    "phone[:3]\n",
+    "# write a slice to get the middle three digits\n",
+    "phone[4:7]\n",
+    "\n",
+    "#same\n",
+    "phone[8:12]\n",
+    "phone[8:]\n",
+    "\n",
+    "#second can't be smaller\n",
+    "phone[-1:-10]\n",
+    "phone[8:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2-12'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# write a slice to get the middle three digits"
+    "phone[2:len(phone)//2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(len(phone)/2)) # float\n",
+    "print(type(len(phone)//2)) # int\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "202 123 4576\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2021234576'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "first = phone[:3]\n",
+    "second = phone[4:7]\n",
+    "third = phone[8:]\n",
+    "\n",
+    "print(first,second,third)\n",
+    "\n",
+    "rejoined = first+second+third\n",
+    "rejoined"
    ]
   },
   {
@@ -67,18 +247,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone[1:1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone[5:4]"
    ]
@@ -92,9 +294,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'23-4576'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone[5:10000]"
    ]
@@ -108,11 +321,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'202'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What do you think this will output?\n",
     "phone[:3]"
    ]
   },
@@ -152,9 +375,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'202-123-4576'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone[:]"
    ]
@@ -163,12 +397,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you provide a negative index, Python will count from the right."
+    "If you provide a negative index, Python will count from the left."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +411,7 @@
        "'4576'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,29 +429,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "dash index: 3\n",
+      "ps5 index: 0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'ps5'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# initialize string\n",
     "assignment = \"ps5-clean\"\n",
     "# get index of dash\n",
-    "dash_index = assignment.find(\"-\")\n",
+    "dash_index = assignment.find(\"-\") # can do words too, \"ps5\"\n",
+    "ps5_index = assignment.find(\"ps5\") # can do words too, \"ps5\"\n",
+    "\n",
     "# print index\n",
-    "print(dash_index)"
+    "print(\"dash index:\", dash_index)\n",
+    "\n",
+    "print(\"ps5 index:\", ps5_index)\n",
+    "\n",
+    "assignment[:dash_index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +477,7 @@
        "'ps5'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +497,8 @@
      "output_type": "stream",
      "text": [
       "-clean\n",
-      "clean\n"
+      "clean\n",
+      "-clean\n"
      ]
     }
    ],
@@ -255,7 +507,11 @@
     "print(assignment[dash_index:])\n",
     "\n",
     "# not including dash\n",
-    "print(assignment[dash_index+1:])\n"
+    "print(assignment[dash_index+1:])\n",
+    "\n",
+    "## if getting everything to the right of searched value, need to offset \n",
+    "## start by length of search query\n",
+    "print(assignment[ps5_index+len(\"ps5\"):])\n"
    ]
   },
   {
@@ -270,10 +526,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ro361\n",
+      "georgetown\n",
+      "edu\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'ro361@georgetown.edu'\n",
+    "\n",
+    "at_index = string.find(\"@\")\n",
+    "username = string[:at_index]\n",
+    "print(username)\n",
+    "\n",
+    "period_index = string.find(\".\")\n",
+    "domain = string[at_index+1:period_index]\n",
+    "print(domain)\n",
+    "\n",
+    "extension = string[period_index+1:]\n",
+    "print(extension)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,21 +564,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['John Smith',\n",
+       " 'Jane Doe',\n",
+       " 'Michael Johnson',\n",
+       " 'Emily Davis',\n",
+       " 'James Brown',\n",
+       " 'Patricia Taylor',\n",
+       " 'Robert Anderson',\n",
+       " 'Linda Thomas',\n",
+       " 'David White',\n",
+       " 'Barbara Harris',\n",
+       " 'Richard Clark',\n",
+       " 'Elizabeth Lewis',\n",
+       " 'Joseph Young',\n",
+       " 'Jennifer Hall',\n",
+       " 'Charles Allen',\n",
+       " 'Mary King',\n",
+       " 'Christopher Wright',\n",
+       " 'Susan Scott',\n",
+       " 'Daniel Mitchell',\n",
+       " 'Margaret Roberts',\n",
+       " 'Matthew Green',\n",
+       " 'Karen Walker',\n",
+       " 'Anthony Adams',\n",
+       " 'Nancy Baker',\n",
+       " 'Mark Nelson',\n",
+       " 'Sarah Hill',\n",
+       " 'Steven Moore',\n",
+       " 'Jessica Campbell',\n",
+       " 'Paul Rogers',\n",
+       " 'Sandra Evans',\n",
+       " 'Kenneth Phillips',\n",
+       " 'Ashley Turner',\n",
+       " 'Joshua Parker',\n",
+       " 'Donna Collins',\n",
+       " 'George Stewart',\n",
+       " 'Michelle Sanchez',\n",
+       " 'Edward Morris',\n",
+       " 'Angela Powell',\n",
+       " 'Brian Peterson',\n",
+       " 'Sharon Cook',\n",
+       " 'Kevin Cox',\n",
+       " 'Deborah Reed',\n",
+       " 'Jason Ward',\n",
+       " 'Laura Howard',\n",
+       " 'Jeffrey Bell',\n",
+       " 'Kimberly Lee',\n",
+       " 'Ryan Wood',\n",
+       " 'Cynthia Cooper',\n",
+       " 'Jacob Morgan',\n",
+       " 'Kathleen Hughes',\n",
+       " 'Nicholas Foster',\n",
+       " 'Diane Richardson',\n",
+       " 'Eric Kelly',\n",
+       " 'Rachel Barnes',\n",
+       " 'Andrew Watson',\n",
+       " 'Brenda Bryant',\n",
+       " 'Benjamin Russell',\n",
+       " 'Catherine Diaz',\n",
+       " 'Patrick Griffin',\n",
+       " 'Christina Fisher',\n",
+       " 'Gregory Cruz',\n",
+       " 'Debra Henderson',\n",
+       " 'Timothy Simmons',\n",
+       " 'Rebecca Perkins',\n",
+       " 'Scott Russell',\n",
+       " 'Katherine Coleman',\n",
+       " 'Justin Brooks',\n",
+       " 'Amy Jenkins',\n",
+       " 'Brandon Spencer',\n",
+       " 'Ann Perry',\n",
+       " 'Jonathan Long',\n",
+       " 'Carolyn Carter',\n",
+       " 'Stephen Wright',\n",
+       " 'Rebecca Murphy',\n",
+       " 'Jeremy Gray',\n",
+       " 'Shirley Lopez',\n",
+       " 'Sean Harris',\n",
+       " 'Pamela Martinez',\n",
+       " 'Patrick Wilson',\n",
+       " 'Samantha Rivera',\n",
+       " 'Christian Torres',\n",
+       " 'Megan Ramirez',\n",
+       " 'Alexander Gonzales',\n",
+       " 'Kelly Bailey',\n",
+       " 'Samuel Jenkins',\n",
+       " 'Heather Brooks',\n",
+       " 'Dylan Foster',\n",
+       " 'Victoria Rodriguez',\n",
+       " 'Aaron Sanders',\n",
+       " 'Evelyn Morales',\n",
+       " 'Tyler Peterson',\n",
+       " 'Lori Cruz',\n",
+       " 'Kyle Richardson',\n",
+       " 'Joan Bennett',\n",
+       " 'Adam James',\n",
+       " 'Monica Simmons',\n",
+       " 'Austin Ward',\n",
+       " 'Alice Powell',\n",
+       " 'Austin Rivera',\n",
+       " 'Brittany Cox',\n",
+       " 'Jared Brooks',\n",
+       " 'Kimberly Coleman',\n",
+       " 'Blake Lee',\n",
+       " 'Kristen Collins',\n",
+       " 'Adrian Jenkins',\n",
+       " 'Tracy Edwards',\n",
+       " 'Taylor Patterson',\n",
+       " 'Nathaniel Howard',\n",
+       " 'Chloe Murphy',\n",
+       " 'Gabriel Wright',\n",
+       " 'Amber Nelson',\n",
+       " 'Justin Adams',\n",
+       " 'Kaitlyn Harris',\n",
+       " 'Jordan Rivera',\n",
+       " 'Sophie Bennett',\n",
+       " 'Zachary Wood']"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# names of people who signed a ballot intiaitive\n",
-    "names = open('exercises/names_list.txt').read().split(\"\\n\")"
+    "names = open('exercises/names_list.txt').read().split(\"\\n\")\n",
+    "names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116\n",
+      "John Smith\n",
+      "Jane Doe\n",
+      "Michael Johnson\n",
+      "Emily Davis\n",
+      "James Brown\n"
+     ]
+    }
+   ],
    "source": [
-    "# investigate names: data type? length?"
+    "# investigate names: data type? length?\n",
+    "print(len(names))\n",
+    "\n",
+    "#print first five\n",
+    "for item in range(5):\n",
+    "    print(names[item])"
    ]
   },
   {
@@ -449,7 +873,7 @@
     }
    ],
    "source": [
-    "for i in range(len(names)):\n",
+    "for i in range(len(names)): # for every number from 0 to 116 (not incl 116)\n",
     "    print(names[i] + \": \" + # third\n",
     "          names[i-2], # first\n",
     "          names[i-1], # second\n",
@@ -467,7 +891,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[86], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnames\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m116\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "names[116]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "116"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -674,20 +1139,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oasfter\n",
+      "tasfter\n",
+      "tosfter\n",
+      "toafter\n",
+      "toaster\n",
+      "toasfer\n",
+      "toasftr\n",
+      "toasfte\n"
+     ]
+    }
+   ],
    "source": [
-    "# can manually remove of one letter at a time"
+    "# can manually remove of one letter at a time\n",
+    "\n",
+    "for character_index in range(len(misspelled_word)):\n",
+    "    \n",
+    "    print(misspelled_word[:character_index] + misspelled_word[character_index+1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "candidate: icrowaxve\n",
+      "candidate: mcrowaxve\n",
+      "candidate: mirowaxve\n",
+      "candidate: micowaxve\n",
+      "candidate: micrwaxve\n",
+      "candidate: microaxve\n",
+      "candidate: microwxve\n",
+      "candidate: microwave\n",
+      "correct word: microwave\n",
+      "candidate: microwaxe\n",
+      "candidate: microwaxv\n"
+     ]
+    }
+   ],
    "source": [
-    "# can do automatically for word of any size"
+    "# can manually remove of one letter at a time\n",
+    "misspelled_word = \"microwaxve\" # toasfter\n",
+    "correct_words = [\"microwave\",\"oven\",\"fridge\",\"toaster\"]\n",
+    "\n",
+    "for character_index in range(len(misspelled_word)):\n",
+    "    # create a version of the word with the character at the given index removed\n",
+    "    candidate = misspelled_word[:character_index] + misspelled_word[character_index+1:]\n",
+    "    print(\"candidate:\",candidate)\n",
+    "    if candidate in correct_words:\n",
+    "        print(\"correct word:\",candidate)"
    ]
   }
  ],
@@ -707,7 +1218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
