--- a/lecture/week-4/dictionaries.ipynb
+++ b/lecture/week-4/dictionaries.ipynb
@@ -74,31 +74,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Paul'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "person['fname'] # key has to be in quotes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'height'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mperson\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mheight\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;66;03m# search for key that doesn't exist\u001b[39;00m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'height'"
+     ]
+    }
+   ],
    "source": [
     "person['height'] # search for key that doesn't exist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# check if key in dictionary\n",
     "'fname' in person\n",
-    "# 'Paul' in person"
+    "\n",
+    "#false\n",
+    "'height' in person\n",
+    "\n",
+    "# searches by values not by keys\n",
+    "'Paul' in person"
    ]
   },
   {
@@ -110,12 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fname Paul\n",
+      "lname Ohm\n",
+      "title professor\n",
+      "age 47\n"
+     ]
+    }
+   ],
    "source": [
     "for k in person:\n",
-    "\tprint(\"{} {}\".format(k, person[k]))"
+    "\tprint(k, person[k])"
    ]
   },
   {
@@ -127,9 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paul\n",
+      "Ohm\n",
+      "professor\n",
+      "47\n"
+     ]
+    }
+   ],
    "source": [
     "for v in person.values():\n",
     "    print(v)"
@@ -137,13 +198,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age 47\n",
+      "fname Paul\n",
+      "lname Ohm\n",
+      "title professor\n"
+     ]
+    }
+   ],
    "source": [
     "# There is a .keys method, but not necesarry\n",
     "for k in (sorted(person.keys())):\n",
-    "\tprint(\"{} {}\".format(k, person[k]))\n",
+    "\tprint(k, person[k])\n",
     "\t"
    ]
   },
@@ -156,14 +228,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original: {'fname': 'Paul', 'lname': 'Ohm', 'title': 'professor', 'age': 47, 'height': 8}\n",
+      "New: {'fname': 'Paul', 'lname': 'Ohm', 'title': 'professor', 'age': 47, 'height': 10}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Original:\",person)\n",
     "\n",
     "## add a new key/value pair\n",
     "person[\"height\"]=8\n",
+    "# can't have multiple keys of same value (overwrites height)\n",
+    "person[\"height\"]=10\n",
     "\n",
     "print(\"New:\",person)"
    ]
@@ -173,6 +256,27 @@
    "metadata": {},
    "source": [
     "`keys()` and `values()` methods don't return lists - just something list-like (just like range). You may have to cast it to a list in some situations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Paul', 'Ohm', 'professor', 47, 10]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(5))\n",
+    "list(person.values())"
    ]
   },
   {
@@ -193,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +434,7 @@
        "'am not'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,6 +455,75 @@
     "\n",
     "words = open('exercises/alice.txt').read().split() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it is\n",
+      "does not\n",
+      "do not\n",
+      "is not\n",
+      "was not\n",
+      "was not\n",
+      "did not\n",
+      "they have\n",
+      "was not\n",
+      "would not\n",
+      "should not\n",
+      "does not\n",
+      "of the clock\n",
+      "that is\n",
+      "do not\n",
+      "have not\n",
+      "would not\n",
+      "do not\n",
+      "will not\n",
+      "he would\n",
+      "of the clock\n",
+      "you had\n",
+      "should not\n",
+      "you are\n",
+      "I would\n",
+      "will not\n",
+      "of the clock\n",
+      "that is\n",
+      "we have\n",
+      "do not\n",
+      "was not\n",
+      "you you will\n",
+      "it is\n",
+      "could not\n",
+      "cannot\n",
+      "cannot\n",
+      "cannot\n",
+      "you had\n",
+      "will not\n",
+      "do not\n",
+      "should not\n",
+      "I will\n",
+      "I will\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in words:\n",
+    "    # if \"'\" in word: # not necesarry\n",
+    "        if word in contraction_dict:\n",
+    "            print(contraction_dict[word])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -369,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
