--- a/lecture/week-4/exercises/copyright_comparison.ipynb
+++ b/lecture/week-4/exercises/copyright_comparison.ipynb
@@ -84,11 +84,41 @@
    "source": [
     "### EXAMPLE B ###\n",
     "year = int(input(\"In what year was the work published?\"))\n",
+    "\n",
     "while year < 1922:\n",
     "        print(\"The year input must be a number greater than 1922.\")\n",
     "        year = int(input(\"In what year was the work published?\"))\n",
     "\n",
     "print(\"Successful input, move on with code.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "1900\n",
+      "1922\n"
+     ]
+    }
+   ],
+   "source": [
+    "### EXAMPLE B ###\n",
+    "# year = int(input(\"In what year was the work published?\"))\n",
+    "years = [2000,1900,1922]\n",
+    "year = years[0]\n",
+    "\n",
+    "while year != 1922:\n",
+    "    for year in years:\n",
+    "        print(year)\n",
+    "\n",
+    "# print(\"Successful input, move on with code.\")\n",
+    "# print(\"All inputs:\",years)"
    ]
   }
  ],
@@ -108,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
