--- a/lecture/week-3/cold-call/cold_call.ipynb
+++ b/lecture/week-3/cold-call/cold_call.ipynb
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected student: Li-Wen\n"
+      "Selected student: Rhema\n"
      ]
     }
    ],
