--- a/lecture/week-4/week-5/cds_demo.ipynb
+++ b/lecture/week-4/week-5/cds_demo.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Demo code for week 5 lecture\n",
+    "Demonstrates for-loops, lists, and split, replace, and join and **pandas**.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -15,7 +23,6 @@
     }
    ],
    "source": [
-    "# Demo code for week 5 lecture demonstrating for-loops, lists, and split, replace, and join.\n",
     "\n",
     "cds_full = open('cds_2022.csv', encoding='utf-8-sig').read().split('\\n')\n",
     "\n",
@@ -223,54 +230,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame(total)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "pd.DataFrame(total)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'name0', 'rolls': array([5, 6, 4])},\n",
-       " {'name': 'name1', 'rolls': array([2, 6, 3])},\n",
-       " {'name': 'name2', 'rolls': array([2, 2])}]"
+       "[{'name': 'name0', 'rolls': array([1])},\n",
+       " {'name': 'name1', 'rolls': array([4, 5, 5])},\n",
+       " {'name': 'name2', 'rolls': array([6, 3])}]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
     "\n",
     "players = []\n",
     "\n",
@@ -285,36 +271,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>rolls</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>name0</td>\n",
+       "      <td>[1]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>name1</td>\n",
+       "      <td>[4, 5, 5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>name2</td>\n",
+       "      <td>[6, 3]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([5, 6, 4])"
+       "    name      rolls\n",
+       "0  name0        [1]\n",
+       "1  name1  [4, 5, 5]\n",
+       "2  name2     [6, 3]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(players)[\"rolls\"][0]"
+    "players_df = pd.DataFrame(players)\n",
+    "players_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          [1]\n",
+       "1    [4, 5, 5]\n",
+       "2       [6, 3]\n",
+       "Name: rolls, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "players_df = pd.DataFrame(players)"
+    "#select by column\n",
+    "players_df[\"rolls\"]\n",
+    "\n",
+    "#then select by index\n",
+    "players_df[\"rolls\"][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Back to congressionally directed spending example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +505,7 @@
        "[2 rows x 47 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,39 +517,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_32139/2385130029.py:5: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  cds_df.iloc[1][7]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "np.float64(nan)"
+       "category                       Agriculture, Rural Development, Food and Drug ...\n",
+       "agency                                Animal and Plant Health Inspection Service\n",
+       "account                                                                APHIS S&E\n",
+       "project                                                   Feral Swine Management\n",
+       "recipient                                     Arkansas Department of Agriculture\n",
+       "location                                                                     NaN\n",
+       "state                                                                         AR\n",
+       "budget_request                                                               NaN\n",
+       "additional_amount                                                            NaN\n",
+       "amount                                                                    650000\n",
+       "origination                                                                    S\n",
+       "requestor_one_full_name                                             John Boozman\n",
+       "requestor_one_bioguide_id                                                B001236\n",
+       "requestor_one_chamber                                                        sen\n",
+       "requestor_one_party                                                   Republican\n",
+       "requestor_two_full_name                                                      NaN\n",
+       "requestor_two_bioguide_id                                                    NaN\n",
+       "requestor_two_chamber                                                        NaN\n",
+       "requestor_two_party                                                          NaN\n",
+       "requestor_three_full_name                                                    NaN\n",
+       "requestor_three_bioguide_id                                                  NaN\n",
+       "requestor_three_chamber                                                      NaN\n",
+       "requestor_three_party                                                        NaN\n",
+       "requestor_four_full_name                                                     NaN\n",
+       "requestor_four_bioguide_id                                                   NaN\n",
+       "requestor_four_chamber                                                       NaN\n",
+       "requestor_four_party                                                         NaN\n",
+       "requestor_five_full_name                                                     NaN\n",
+       "requestor_five_bioguide_id                                                   NaN\n",
+       "requestor_five_chamber                                                       NaN\n",
+       "requestor_five_party                                                         NaN\n",
+       "requestor_six_full_name                                                      NaN\n",
+       "requestor_six_bioguide_id                                                    NaN\n",
+       "requestor_six_chamber                                                        NaN\n",
+       "requestor_six_party                                                          NaN\n",
+       "requestor_seven_full_name                                                    NaN\n",
+       "requestor_seven_bioguide_id                                                  NaN\n",
+       "requestor_seven_chamber                                                      NaN\n",
+       "requestor_seven_party                                                        NaN\n",
+       "requestor_eight_full_name                                                    NaN\n",
+       "requestor_eight_bioguide_id                                                  NaN\n",
+       "requestor_eight_chamber                                                      NaN\n",
+       "requestor_eight_party                                                        NaN\n",
+       "requestor_nine_full_name                                                     NaN\n",
+       "requestor_nine_bioguide_id                                                   NaN\n",
+       "requestor_nine_chamber                                                       NaN\n",
+       "requestor_nine_party                                                         NaN\n",
+       "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# isolate rows using iloc\n",
-    "cds_df.iloc[1]\n",
-    "\n",
-    "# isolate elements with additional slice\n",
-    "cds_df.iloc[1][7]"
+    "cds_df.iloc[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_11023/1556488285.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  cds_df.iloc[1][0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Agriculture, Rural Development, Food and Drug Administration, and Related Agencies'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# isolate elements with additional slice\n",
+    "cds_df.iloc[1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -520,18 +643,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# get columns\n",
     "cds_df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -551,18 +675,26 @@
        "Name: amount, Length: 4975, dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#get specific column\n",
     "cds_df[\"amount\"]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Another example"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +767,7 @@
        "4          50          55          60"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -665,32 +797,64 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.mean()\n",
+    "df.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Category A    30.0\n",
+       "Category B    35.0\n",
+       "Category C    40.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "df.median()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    False\n",
+      "Boolean result:\n",
+      " 0    False\n",
       "1    False\n",
       "2     True\n",
       "3     True\n",
       "4     True\n",
       "Name: Category A, dtype: bool\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Filtered df:'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -748,19 +912,25 @@
        "4          50          55          60"
       ]
      },
-     "execution_count": 69,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(df[\"Category A\"] > 20)\n",
-    "df[df[\"Category A\"] > 20]"
+    "print(\"Boolean result:\\n\",df[\"Category A\"] > 20)\n",
+    "display(\"Filtered df:\",df[df[\"Category A\"] > 20])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Even data vis is possible with pandas!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +939,7 @@
        "<Axes: title={'center': 'Line Plot of Categories'}>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -787,18 +957,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Create a simple plot to visualize the data\n",
-    "\n",
-    "# Plotting the data from the DataFrame\n",
     "df.plot(kind='line', marker='o', title='Line Plot of Categories')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
