--- a/lecture/week-5/clean_demo.ipynb
+++ b/lecture/week-5/clean_demo.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: file output.txt already exists. Quitting without saving.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Filename: clean.ipynb\n",
     "### Author: Your name here.\n",
@@ -38,8 +30,8 @@
     "# filename in the variable \"input_filename\" and the output filename in\n",
     "# the variable \"output_filename\"\n",
     "\n",
-    "input_filename = input()\n",
-    "output_filename = input()\n",
+    "input_filename = input(\"input_filename\")\n",
+    "output_filename = input(\"output_filename\")\n",
     "\n",
     "# DO NOT MODIFY THIS LINE. Retrieve the words from the specified file.\n",
     "text = open(input_filename).read()\n",
@@ -64,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1065,7 @@
        " ...]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,35 +1082,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ",\n",
-      "!\n",
-      ".\n",
-      "?\n",
-      ";\n",
-      "\"\n",
-      "(\n",
-      ")\n",
-      "-\n",
-      "\\\n",
-      ":\n",
-      "'\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Reviewing snippets of code from student submissions\n",
+    "Notice and address errors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "PUNCTUATION = ',!.?;\"()-\\\\:\\'' \n",
     "\n",
     "for punc in PUNCTUATION:\n",
-    "    print(punc)\n",
-    "    text = text.replace(punc, '')\n"
+    "    text = text.replace(punc, '')"
    ]
   },
   {
@@ -1130,23 +1110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CHAPTER VII A Mad TeaParty\n",
-      "\n",
-      "There was a table set out under a tree in front of the house and the\n",
-      "Mar\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#student submission\n",
     "CAPITAL_LETTERS = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
-    "print(text[:100])\n",
     "for capitalized_letter in CAPITAL_LETTERS:\n",
     "    text = text.lower()\n",
     "\n",
@@ -1196,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2205,14 +2174,14 @@
        " ...]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#submission\n",
     "words = text.replace('\\n\\n', ' ').replace('\\n', ' ').split(' ')\n",
-    "# words\n",
     "\n",
     "# more efficient\n",
     "text.split()"
@@ -2227,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3236,7 +3205,7 @@
        " ...]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3244,20 +3213,21 @@
    "source": [
     "#remove words\n",
     "word_list = words\n",
+    "clean_words = []\n",
     "\n",
     "for word in word_list:\n",
     "    # words = word.isalpha() \n",
     "    # print(words)\n",
     "\n",
-    "    if not word.isalpha():\n",
-    "        word_list.remove(word)\n",
+    "    if word.isalpha():\n",
+    "        clean_words.append(word)\n",
     "\n",
-    "word_list"
+    "clean_words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -15428,6 +15398,7 @@
     }
    ],
    "source": [
+    "#demo incorrect use of loop for this purpose (iterating over string not list)\n",
     "for word in text:\n",
     "    print(word)\n",
     "    for i in PUNCTUATION:\n",
@@ -15438,7 +15409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Don’t print entire file as output. You can use slicing to test, and comment out testing before submitting your assignment.\n"
+    "Avoiding printing entire file as output. You can use slicing to test, and comment out testing before submitting your assignment.\n"
    ]
   },
   {
