--- a/cold_call.ipynb
+++ b/cold_call.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 21\u001b[0m\n\u001b[1;32m     18\u001b[0m absent_students \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProvide the first names of absent students: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m absent_student \u001b[38;5;129;01min\u001b[39;00m absent_students:\n\u001b[0;32m---> 21\u001b[0m     \u001b[43mfirst_names\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[43mabsent_student\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cold_call.ipynb\n",
     "# created by Rachel Orey, Fall 2024\n",
@@ -25,7 +13,7 @@
     "import random\n",
     "\n",
     "# load student names from file\n",
-    "students = open('f24-students.csv').read().split(\"\\n\")\n",
+    "students = open('lecture/week-4/exercises/f24-students.csv').read().split(\"\\n\")\n",
     "\n",
     "# create empty list to store first names\n",
     "first_names = []\n",
@@ -37,20 +25,23 @@
     "#remove absent students\n",
     "absent_students = input(\"Provide the first names of absent students: \").split(\",\")\n",
     "\n",
-    "for absent_student in absent_students:\n",
-    "    first_names.remove(absent_student)"
+    "if len(absent_students) > 1:\n",
+    "    for absent_student in absent_students:\n",
+    "        first_names.remove(absent_student)\n",
+    "    else:\n",
+    "        print(\"No absent students reported.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected student: Grayson\n"
+      "Selected student: Angelene\n"
      ]
     }
    ],
